--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,22 @@
 spring:
     datasource:
-        url: jdbc:h2:mem:jalsani-server
-        username: sa
-        password:
-        driver-class-name: org.h2.Driver
-
+        url: jdbc:mysql://localhost:3306/jalsani-server?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+        username: root
+        password: 1234
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        initialization-mode: always
 
     jpa:
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         properties:
             hibernate:
                 format_sql: true
+        defer-datasource-initialization: true
+mybatis:
+    type-aliases-package: com.example.jalsaniserver
+    config-locations:  classpath*:**/mybatis/mybatis-config.xml
+    mapper-locations:  classpath*:**/mybatis/mapper/*.xml
 
 logging.level:
     org.hibernate.SQL: debug
